fix: resolve an issue where hamburger icon was not visible on light background

--- a/src/styles/nav/NavBar.css
+++ b/src/styles/nav/NavBar.css
@@ -38,6 +38,7 @@ nav ul {
 	padding: 0;
 	background: none;
 	cursor: pointer;
+	mix-blend-mode: difference;
 }
 
 @keyframes fly-down {
